--- a/ly-item/ly-item-service/pom.xml
+++ b/ly-item/ly-item-service/pom.xml
@@ -11,7 +11,11 @@
 
     <groupId>com.leyou.service</groupId>
     <artifactId>ly-item-service</artifactId>
+    <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
+    <modules>
+        <module>ly-upload</module>
+    </modules>
 
     <dependencies>
         <!--Eureka客户端-->
