--- a/ly-item/ly-item-service/src/main/resources/application.yml
+++ b/ly-item/ly-item-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: item-service
   datasource:
-    url: jdbc:mysql://localhost:3306/heitwice?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&useSSL=true
+    url: jdbc:mysql://localhost:3306/heitwice?useUnicode=true&characterEncoding=utf8
     username: root
     password: root
 eureka:
@@ -18,4 +18,6 @@ eureka:
     ip-address: 127.0.0.1
     instance-id: ${spring.application.name}:${server.port}
 mybatis:
-      mapper-locations: classpath:mybatis/*.xml
+  mapper-locations: classpath:mybatis/*.xml
+  type-aliases-package: com.leyou.item.pojo.*
+  config-location: classpath:mybatis-config.xml
