--- a/ly-common/pom.xml
+++ b/ly-common/pom.xml
@@ -27,9 +27,14 @@
             <artifactId>tomcat-embed-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>16.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>5.1.4.RELEASE</version>
         </dependency>
     </dependencies>
 </project>
